--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
-        "arcanedev/localization": "^7.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -17,8 +16,7 @@
         "laravel/tinker": "^2.0",
         "mailgun/mailgun-php": "^3.0",
         "php-http/guzzle6-adapter": "^2.0",
-        "php-http/message": "^1.8",
-        "torann/geoip": "^1.2"
+        "php-http/message": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
