fix anchors - fix jquery

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "jquery": "^3.5.1",
         "jquery-visible": "^1.2.0"
     }
 }
